DuPont DevSB/src/objects/Corporate_Package__c.object
<CustomObject>
    <description>Corporate Packages Object to track all Corp package deployments being done as part of org Split</description>
    <fields>
        <fullName>Copado_Deployment__c</fullName>
        <description>URL For the Copado Deployment Record</description>
        <label>Copado Deployment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deployed_Production_Orgs__c</fullName>
        <label>Deployed Production Orgs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AgCo</fullName>
                </value>
                <value>
                    <fullName>MatCo</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>Remedy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Out of Scope</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                    <label>Development In Progress</label>
                </value>
                <value>
                    <fullName>Development Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting for TCS Validation</fullName>
                </value>
                <value>
                    <fullName>TCS Validated</fullName>
                </value>
                <value>
                    <fullName>Waiting for UAT</fullName>
                    <label>UAT In Progess</label>
                </value>
                <value>
                    <fullName>UAT Validated</fullName>
                </value>
                <value>
                    <fullName>Production Ready</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeted_Production_Orgs__c</fullName>
        <label>Targeted Production Orgs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AgCo</fullName>
                </value>
                <value>
                    <fullName>MatCo</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>Remedy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeted_Sandbox_Orgs__c</fullName>
        <label>Deployed Sandbox Orgs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AgCo - Dev</fullName>
                </value>
                <value>
                    <fullName>AgCO - UAT</fullName>
                </value>
                <value>
                    <fullName>MatCo - Dev</fullName>
                </value>
                <value>
                    <fullName>MatCo - UAT</fullName>
                </value>
                <value>
                    <fullName>NH - Dev</fullName>
                </value>
                <value>
                    <fullName>NH - UAT</fullName>
                </value>
                <value>
                    <fullName>IB - Dev</fullName>
                </value>
                <value>
                    <fullName>IB - UAT</fullName>
                </value>
                <value>
                    <fullName>DPS - Dev</fullName>
                </value>
                <value>
                    <fullName>DPS - UAT</fullName>
                </value>
                <value>
                    <fullName>DSS - Dev</fullName>
                </value>
                <value>
                    <fullName>DSS - UAT</fullName>
                </value>
                <value>
                    <fullName>EC - Dev</fullName>
                </value>
                <value>
                    <fullName>EC - UAT</fullName>
                </value>
                <value>
                    <fullName>Remedy - Dev</fullName>
                </value>
                <value>
                    <fullName>Remedy - UAT</fullName>
                </value>
                <value>
                    <fullName>AgCo - Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Corporate Package</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Targeted_Production_Orgs__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <nameField>
        <label>Corporate Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>